--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@angular/router": "~11.2.7",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "zone.js": "^0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.6",
