Escape special chars

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,7 +41,7 @@ jobs:
     - name: NPM build Angular Production
       run: ng build --prod
     - name: Delete Existing Files
-      run: sudo sshpass -p ${{ secrets.SSH_PASS }} -v ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'rm -rf public_html/pantelismanikas/titanes.pantelismanikas.com/dist/*'
+      run: sudo sshpass -p "${{ secrets.SSH_PASS }}" -v ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'rm -rf public_html/pantelismanikas/titanes.pantelismanikas.com/dist/*'
 
     - name: Compress and Copy New Files to server
       run : |
