Escape special chars

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -49,6 +49,6 @@ jobs:
             tar -czvf ../../app.tar.gz ./
             cd ..
             cd ..
-            sudo sshpass -p ${{ secrets.SSH_PASS }} scp -v -o StrictHostKeyChecking=no -r app.tar.gz ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:public_html/pantelismanikas/titanes.pantelismanikas.com/dist
+            sudo sshpass -p "${{ secrets.SSH_PASS }}" scp -v -o StrictHostKeyChecking=no -r app.tar.gz ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:public_html/pantelismanikas/titanes.pantelismanikas.com/dist
     - name: Uncompress new Files
-      run : sudo sshpass -p ${{ secrets.SSH_PASS }} -v ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'cd /public_html/pantelismanikas/titanes.pantelismanikas.com/dist && tar -xzvf app.tar.gz && rm app.tar.gz'
+      run : sudo sshpass -p "${{ secrets.SSH_PASS }}" -v ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'cd /public_html/pantelismanikas/titanes.pantelismanikas.com/dist && tar -xzvf app.tar.gz && rm app.tar.gz'
